# pilot_wave

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
assets/: CMakeLists.txt  fragment.glsl  vertex.glsl
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
include/core/: geometry.h  math_util.h  particles.h
include/pilot_wave/: controls.h  qparticles.h
include/quantum/: harmonic_oscillator.h  hydrogen_atom.h  qstate.h  square_well.h
include/testing/: error_interval.h  integrate.h  testing.h
src/: CMakeLists.txt
src/core/: CMakeLists.txt  camera.cpp  camera.h  geometry.cpp  math_util.cpp  model.cpp  model.h  particles.cpp  particles.h  physics_util.h  rng.cpp  rng.h  shaders.cpp
src/pilot_wave/: CMakeLists.txt  controls.cpp  controls.h  pilot_wave.cpp  qparticles.cpp
src/quantum/: CMakeLists.txt  harmonic_oscillator.cpp  hydrogen_atom.cpp  qstate.cpp  qstate.h  qsystem.cpp  qsystem.h  square_well.cpp  square_well.h
src/testing/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  math_util_test.cpp
tests/quantum/: CMakeLists.txt  harmonic_oscillator_test.cpp  qstate_test.cpp  square_well_test.cpp
